# oceanicospy

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  requirements.txt  setup.py
data/inp_templates/swan/: launcher_base_cecc.slurm  swaninit
data/inp_templates/ww3/: ww3_grid.inp_code  ww3_prnc_current.inp_code
data/inp_templates/xbeach/: launcher_xbeach_base.slurm
data/model_config_templates/swan/: launcher_base_nest_cecc.slurm  run_base_nonstat_SAI.swn  run_base_stat.swn
data/model_config_templates/ww3/: create_grid_code.m  ww3_ounp.inp_code
data/nc_data/: wave_data.nc  wind_data.nc
docs/: conf.py  index.rst  observations.rst  requirements.txt  retrievals.rst
docs/_build/: genindex.html  index.html  objects.inv  plots.html  retrievals.html  search.html  searchindex.js
docs/analysis/: conditioning.rst  index.rst  spectral.rst  temporal.rst
docs/images/: images_generator.ipynb
docs/models/: index.rst
docs/observations/: AQUAlogger.rst  BaseLogger.rst  RBR.rst  index.rst
examples/: reading_field_data.ipynb
oceanicospy/analysis/: __init__.py  climatology.py  extremes.py  spectral.py  spectral2.py  spectral_old.py  temporal.py
oceanicospy/observations/: __init__.py  aqualogger.py  awac.py  bluelog.py  pressure_sensor_base.py  rbr.py  resistive_waterlevel_sensor.py  weather_station.py
oceanicospy/plots/: __init__.py  basic_plots.py
oceanicospy/retrievals/: __init__.py  download_ERA5_data.py  download_uhslc_data.py
oceanicospy/utils/: constants.py  extras.py  wave_props.py
tests/: analysis_tests.py  reading_field_data.py
(+185 files in other folders)
